--- a/index.html
+++ b/index.html
@@ -1,15 +1,26 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Memory Game - Well Melo</title>
-    <link rel="stylesheet" href="./css/style.css">
-</head>
-<body>
-    Hello Word!!!<br>
-    Well Melo s3<br>
-    Git
-</body>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Memory Game DBZ | Login</title>
+        
+        <link rel="stylesheet" href="./css/reset.css">
+        <link rel="stylesheet" href="./css/login.css">
+
+        <script defer src="./js/login.js"></script>
+    </head>
+    <body>
+        <form class="login-form">
+
+            <div class="login_header">
+                <img src="./images/dragonball-z-logo.png" alt="Dragon Ball Z logo">
+                <h1>Memory Game DBZ</h1>
+            </div>
+
+            <input type="text" placeholder="Name" class="login_input">
+            <button type="submit" class="login_button" disabled>Play Now!</button>
+
+        </form>
+    </body>
 </html>
