--- a/pages/game.html
+++ b/pages/game.html
@@ -7,15 +7,10 @@
     <title>Memory Game DBZ | Login</title>
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/game.css">
+    <script defer src="../js/game.js"></script>
+
 </head>
 <body>
-    <div class="grid">
-
-        <div class="card">
-            <div class="face front"></div>
-            <div class="face back"></div>
-        </div>
-
-    </div>
+    <div class="grid"></div>
 </body>
 </html>
