Adicionei botao Play Again! Após ganhar

--- a/pages/game.html
+++ b/pages/game.html
@@ -15,7 +15,10 @@
     <main>
         <header>
             <span class="player"></span>
-            <span>Tempo: <span class="timer">00</span></span>
+            <span>
+                Tempo: <span class="timer">00</span>
+                <button onClick="window.location.reload();" class="refresh" disabled>JOGAR NOVAMENTE</button>
+            </span>
         </header>
 
         <div class="grid"></div>
