--- a/game/index.html
+++ b/game/index.html
@@ -17,7 +17,8 @@
             <span class="player"></span>
             <span>
                 Tempo: <span class="timer">00</span>
-                <button onClick="window.location.reload();" class="refresh" disabled>JOGAR NOVAMENTE</button>
+                <button onClick
+                ="window.location.reload();" class="refresh" disabled>JOGAR NOVAMENTE</button>
             </span>
         </header>
 
