--- a/game/index.html
+++ b/game/index.html
@@ -16,9 +16,9 @@
         <header>
             <span class="player"></span>
             <span>
-                Tempo: <span class="timer">00</span>
+                TIMER: <span class="timer">00</span>
                 <button onClick
-                ="window.location.reload();" class="refresh" disabled>JOGAR NOVAMENTE</button>
+                ="window.location.reload();" class="refresh" disabled>PLAY AGAIN</button>
             </span>
         </header>
 
