--- a/game/index.html
+++ b/game/index.html
@@ -24,6 +24,10 @@
 
         <div class="grid"></div>
 
+        <div class="footer">
+            Desenvolvido por Wellington Melo -> <a href="https://github.com/wellmelo" target="_blank">Acesso meu GitHub</a>
+        </div>
+
         <!-- Trigger/Open The Modal -->
         <button id="myBtn"></button>
 
