--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
 
             <input type="text" placeholder="Name" class="login_input">
-            <button type="submit" class="login_button" disabled>Play Now!</button>
+            <button type="submit" class="login_button" disabled>PLAY NOW!</button>
 
         </form>
     </body>
