--- a/game/index.html
+++ b/game/index.html
@@ -25,7 +25,7 @@
         <div class="grid"></div>
 
         <div class="footer">
-            Desenvolvido por Well Melo -> <a href="https://github.com/wellmelo" target="_blank">Acesso meu GitHub</a>
+            Desenvolvido por Well Melo -> <a href="https://github.com/wellmelo" target="_blank">Meu GitHub</a>
         </div>
 
         <!-- Trigger/Open The Modal -->
