--- a/game/index.html
+++ b/game/index.html
@@ -37,7 +37,7 @@
             <!-- Modal content -->
             <div class="modal-content">
                 <span class="close">&times;</span>
-                <p>Parabéns <span class="nomeplayer"></span>! Seu tempo foi de <span class="timerdois"></span> segundos!</p><br><br>
+                <p>Congratulations <span class="nomeplayer"></span>! You time is <span class="timerdois"></span> seconds!</p><br><br>
                 <button onClick="window.location.reload();" class="refresh">PLAY AGAIN</button>
             </div>
 
