Implementando Ranking e Histórico p3

--- a/game/index.html
+++ b/game/index.html
@@ -14,7 +14,7 @@
 
     <main>
         <header>
-            <span class="player">AAA</span>
+            <span class="player"></span><button id="myBtn2" style="padding:3px 10px;cursor: pointer; background-color: brown;color:#fff;border-radius: 5px;">RANKING</button>
             <span>
                 <span class="timer-texto">TIMER:</span>
                 <span class="timer"></span>
@@ -46,8 +46,6 @@
         </div>
 
 
-        <!-- Trigger/Open The Modal -->
-        <button id="myBtn2">ABRIR RANKING</button>
 
         <!-- The Modal -->
         <div id="myModal2" class="modal2">
