Implementando Ranking e Historic p4

--- a/game/index.html
+++ b/game/index.html
@@ -39,8 +39,8 @@
             <!-- Modal content -->
             <div class="modal-content">
                 <span class="close">&times;</span>
-                <p>Congratulations <b><span class="nomeplayer"></span></b>! You completed the game in <b><span id="timerCombined2">00:00</span></b> time!</p><br>
-                <button onClick="window.location.reload();" class="refresh">PLAY AGAIN</button>
+                <p>Congratulations <b><span class="nomeplayer"></span></b>! You completed the game in <b><span id="timerCombined2">00:00</span></b> time!</p>
+                <!--<button onClick="window.location.reload();" class="refresh">PLAY AGAIN</button> -->
             </div>
 
         </div>
@@ -53,9 +53,8 @@
             <!-- Modal content -->
             <div class="modal-content2">
                 <span class="close2">&times;</span>
-                <div id="ranking"></div>
-                <br>
-                <button onClick="window.location.reload();" class="refresh">PLAY AGAIN</button>
+                <div id="ranking" style="padding-bottom: 10px;"><span>Ranking / Historic<hr style="margin-top: 10px; margin-bottom: 10px;"><br></span></div>
+                <button onClick="window.location.reload();" class="rankButton">PLAY AGAIN</button>
             </div>
 
         </div>
