--- a/game/index.html
+++ b/game/index.html
@@ -27,7 +27,7 @@
         <div class="grid"></div>
 
         <div class="footer">
-            Desenvolvido por Well Melo -> <a href="https://github.com/wellmelo" target="_blank">Meu GitHub</a>
+            Desenvolvido por Well Melo -> 
         </div>
 
 
