--- a/game/index.html
+++ b/game/index.html
@@ -27,7 +27,7 @@
         <div class="grid"></div>
 
         <div class="footer">
-            Desenvolvido por Well Melo -> 
+            Desenvolvido por Well Melo ❤️ 
         </div>
 
 
