Ajuste Ranking e History

--- a/game/index.html
+++ b/game/index.html
@@ -55,7 +55,9 @@
             <!-- Modal content -->
             <div class="modal-content2">
                 <span class="close2">&times;</span>
-                <div id="ranking-list" style="padding-bottom: 10px;"><span>Ranking / Historic<hr style="margin-top: 10px; margin-bottom: 10px;"><br></span></div>
+                <b>Ranking</b> and <b>History</b><hr><br>
+                <div id="ranking-list" style="padding-bottom: 10px;">
+                    <span>Complete a round to enable.</span></div>
                 <button onClick="window.location.reload();" class="rankButton">PLAY AGAIN</button>
             </div>
         </div>
