--- a/index.html
+++ b/index.html
@@ -17,10 +17,13 @@
                 <img src="./images/dragonball-z-logo.png" alt="Dragon Ball Z logo">
                 <h1>Memory Game DBZ</h1>
             </div>
+            <span id="nameError" style="color:red;display:none;">Máximo de 13 caracteres permitido.</span>
+            <input type="text" placeholder="Name" class="login_input" id="nameInput">
+            
 
-            <input type="text" placeholder="Name" class="login_input">
             <button type="submit" class="login_button" disabled>PLAY NOW!</button>
 
         </form>
+
     </body>
 </html>
