Adicionado Tabela Personalizada ao Rank/History

--- a/game/index.html
+++ b/game/index.html
@@ -71,9 +71,22 @@
             <div class="modal-content2">
                 <span class="close2">&times;</span>
                 <span><b>Ranking</b> and <b>History</b><hr></span>
-                <div id="ranking-list">
-                    <span>Complete a round to enable.</span>
+                
+                <div class="tabela-ranking-list">
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>Position</th>
+                                <th>Nick</th>
+                                <th>Time</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tbody id="ranking-list">
+                        </tbody>
+                    </table>
                 </div>
+                    
                 <button onClick="window.location.reload();" class="rankButton">PLAY AGAIN</button>
             </div>
         </div>
