--- a/index.html
+++ b/index.html
@@ -4,26 +4,39 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Memory Game DBZ | Well Melo</title>
+
+        <meta property="og:url" content="https://memorygame.wellmelo.com" />
+        <meta property="og:type" content="Game" />
+        <meta property="og:title" content="Memory Game - Drabon Ball Z" />
+        <meta property="og:description" content="Memory game with Dragon Ball Z theme, have fun and share with your friends!" />
+        <meta property="og:image" content="./images/goku-win.gif" />
+        <meta property="og:site_name" content="Well Melo - Desenvolvedor Web"/>
         
         <link rel="stylesheet" href="./css/reset.css">
         <link rel="stylesheet" href="./css/login.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
         <script defer src="./js/login.js"></script>
     </head>
     <body>
+    <main>
         <form class="login-form">
 
             <div class="login_header">
                 <img src="./images/dragonball-z-logo.png" alt="Dragon Ball Z logo">
                 <h1>Memory Game DBZ</h1>
             </div>
-            <span id="nameError" style="color:red;display:none;">Máximo de 13 caracteres permitido.</span>
+            <span id="nameError">Maximum of 13 characters allowed.</span>
             <input type="text" placeholder="Name" class="login_input" id="nameInput">
             
 
-            <button type="submit" class="login_button" disabled>PLAY NOW!</button>
+            <button type="submit" class="login_button" disabled><i class="fa fa-gamepad" aria-hidden="true"></i> PLAY NOW!</button>
 
         </form>
 
+        <div class="footer">
+            Desenvolvido por Well Melo ❤️ 
+        </div>
+    </main>
     </body>
 </html>
