Ajuste URL og:image

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta property="og:type" content="Game" />
         <meta property="og:title" content="Memory Game - Drabon Ball Z" />
         <meta property="og:description" content="Memory game with Dragon Ball Z theme, have fun and share with your friends!" />
-        <meta property="og:image" content="./images/goku-win.gif" />
+        <meta property="og:image" content="https://memorygame.wellmelo.com/images/goku.gif" />
         <meta property="og:site_name" content="Well Melo - Desenvolvedor Web"/>
         
         <link rel="stylesheet" href="./css/reset.css">
