--- a/game/index.html
+++ b/game/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Memory Game DBZ | Login</title>
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/game.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script defer src="../js/game.js"></script>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Memory Game DBZ | Well Melo</title>
+
+        <meta property="og:url" content="https://memorygame.wellmelo.com" />
+        <meta property="og:type" content="Game" />
+        <meta property="og:title" content="Memory Game - Drabon Ball Z" />
+        <meta property="og:description" content="Memory game with Dragon Ball Z theme, have fun and share with your friends!" />
+        <meta property="og:image" content="https://memorygame.wellmelo.com/images/goku.gif" />
+        <meta property="og:site_name" content="Well Melo - Desenvolvedor Web"/>
+
+        <link rel="stylesheet" href="../css/reset.css">
+        <link rel="stylesheet" href="../css/game.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <script defer src="../js/game.js"></script>
 
 </head>
 <body>
