--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta property="og:type" content="Game" />
         <meta property="og:title" content="Memory Game - Drabon Ball Z" />
         <meta property="og:description" content="Memory game with Dragon Ball Z theme, have fun and share with your friends!" />
-        <meta property="og:image" content="https://memorygame.wellmelo.com/images/goku.gif" />
+        <meta property="og:image" content="https://memorygame.wellmelo.com/images/memory-game-dbz-wellmelo.jpg" />
         <meta property="og:site_name" content="Well Melo - Desenvolvedor Web"/>
         
         <link rel="stylesheet" href="./css/reset.css">
@@ -27,7 +27,7 @@
                 <h1>Memory Game DBZ</h1>
             </div>
             <span id="nameError">Maximum of 13 characters allowed.</span>
-            <input type="text" placeholder="Name" class="login_input" id="nameInput">
+            <input type="text" placeholder="YOU NICK" class="login_input" id="nameInput">
             
 
             <button type="submit" class="login_button" disabled><i class="fa fa-gamepad" aria-hidden="true"></i> PLAY NOW!</button>
