--- a/game/index.html
+++ b/game/index.html
@@ -6,10 +6,10 @@
         <title>Memory Game DBZ | Well Melo</title>
 
         <meta property="og:url" content="https://memorygame.wellmelo.com" />
-        <meta property="og:type" content="Game" />
-        <meta property="og:title" content="Memory Game - Drabon Ball Z" />
+        <meta property="og:type" content="website" />
+        <meta property="og:title" content="Memory Game - Dragon Ball Z" />
         <meta property="og:description" content="Memory game with Dragon Ball Z theme, have fun and share with your friends!" />
-        <meta property="og:image" content="https://memorygame.wellmelo.com/images/memory-game-dbz-wellmelo.jpg" />
+        <meta property="og:image" itemprop="image" content="https://memorygame.wellmelo.com/images/memory-game-dbz-wellmelo.jpg" />
         <meta property="og:site_name" content="Well Melo - Desenvolvedor Web"/>
 
         <link rel="stylesheet" href="../css/reset.css">
@@ -50,7 +50,10 @@
         <div class="grid"></div>
 
         <div class="footer">
-            Desenvolvido por Well Melo ❤️ 
+            Desenvolvido por Well Melo ❤️
+        </div>
+        <div class="footer-sair">
+            <a href="/"><i class="fa fa-sign-out" aria-hidden="true"></i> Sair do jogo</a>
         </div>
 
 
