--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
         <title>Memory Game DBZ | Well Melo</title>
 
         <meta property="og:url" content="https://memorygame.wellmelo.com" />
-        <meta property="og:type" content="Game" />
-        <meta property="og:title" content="Memory Game - Drabon Ball Z" />
+        <meta property="og:type" content="website" />
+        <meta property="og:title" content="Memory Game - Dragon Ball Z" />
         <meta property="og:description" content="Memory game with Dragon Ball Z theme, have fun and share with your friends!" />
-        <meta property="og:image" content="https://memorygame.wellmelo.com/images/memory-game-dbz-wellmelo.jpg" />
+        <meta property="og:image" itemprop="image" content="https://memorygame.wellmelo.com/images/memory-game-dbz-wellmelo.jpg" />
         <meta property="og:site_name" content="Well Melo - Desenvolvedor Web"/>
         
         <link rel="stylesheet" href="./css/reset.css">
