--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
         <meta property="og:description" content="Memory game with Dragon Ball Z theme, have fun and share with your friends!" />
         <meta property="og:image" itemprop="image" content="https://memorygame.wellmelo.com/images/memory-game-dbz-wellmelo.jpg" />
         <meta property="og:site_name" content="Well Melo - Desenvolvedor Web"/>
+
+        <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
+        <link rel="manifest" href="/images/site.webmanifest">
         
         <link rel="stylesheet" href="./css/reset.css">
         <link rel="stylesheet" href="./css/login.css">
