Adicionando Share Whatsapp e Ajustes Meta Tag

--- a/game/index.html
+++ b/game/index.html
@@ -10,6 +10,7 @@
         <meta property="og:title" content="Memory Game - Dragon Ball Z" />
         <meta property="og:description" content="Memory game with Dragon Ball Z theme, have fun and share with your friends!" />
         <meta property="og:image" itemprop="image" content="https://memorygame.wellmelo.com/images/memory-game-dbz-wellmelo.jpg" />
+        <meta property="og:image:alt" content="Memory Game - Dragon Ball Z" />
         <meta property="og:site_name" content="Well Melo - Desenvolvedor Web"/>
 
         <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
@@ -58,6 +59,9 @@
             Desenvolvido por Well Melo ❤️
         </div>
         <div class="footer-sair">
+            <a class="whts" href="https://api.whatsapp.com/send?text=Olha que top esse jogo da memória com tema do Dragon Ball Z!! https://memorygame.wellmelo.com" target="_blank" data-action="share/whatsapp/share">
+                <i class="fa fa-whatsapp"></i> Compartilhe no Whatsapp
+            </a>
             <a href="/"><i class="fa fa-sign-out" aria-hidden="true"></i> Sair do jogo</a>
         </div>
 
