--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <meta property="og:title" content="Memory Game - Dragon Ball Z" />
         <meta property="og:description" content="Memory game with Dragon Ball Z theme, have fun and share with your friends!" />
         <meta property="og:image" itemprop="image" content="https://memorygame.wellmelo.com/images/memory-game-dbz-wellmelo.jpg" />
+        <meta property="og:image:alt" content="Memory Game - Dragon Ball Z" />
         <meta property="og:site_name" content="Well Melo - Desenvolvedor Web"/>
 
         <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
