Adicionado audios nos eventos de Hover e Click

--- a/game/index.html
+++ b/game/index.html
@@ -1,56 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Memory Game DBZ | Well Melo</title>
 
-        <meta property="og:url" content="https://memorygame.wellmelo.com" />
-        <meta property="og:type" content="website" />
-        <meta property="og:title" content="Memory Game - Dragon Ball Z" />
-        <meta property="og:description" content="Memory game with Dragon Ball Z theme, have fun and share with your friends!" />
-        <meta property="og:image" itemprop="image" content="https://memorygame.wellmelo.com/images/memory-game-dbz-wellmelo.jpg" />
-        <meta property="og:image:alt" content="Memory Game - Dragon Ball Z" />
-        <meta property="og:site_name" content="Well Melo - Desenvolvedor Web"/>
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Memory Game DBZ | Well Melo</title>
 
-        <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
-        <link rel="manifest" href="/images/site.webmanifest">
+    <meta property="og:url" content="https://memorygame.wellmelo.com" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Memory Game - Dragon Ball Z" />
+    <meta property="og:description"
+        content="Memory game with Dragon Ball Z theme, have fun and share with your friends!" />
+    <meta property="og:image" itemprop="image"
+        content="https://memorygame.wellmelo.com/images/memory-game-dbz-wellmelo.jpg" />
+    <meta property="og:image:alt" content="Memory Game - Dragon Ball Z" />
+    <meta property="og:site_name" content="Well Melo - Desenvolvedor Web" />
 
-        <link rel="stylesheet" href="../css/reset.css">
-        <link rel="stylesheet" href="../css/game.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <script defer src="../js/game.js"></script>
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
+    <link rel="manifest" href="/images/site.webmanifest">
+
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/game.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script defer src="../js/game.js"></script>
 
 </head>
+
 <body>
 
     <main class="conteudo">
         <header class="headPai">
 
-                <div class="headLeft">
-                    <div class="headLeftUm">
-                        <div class="nick">NICK:</div>
-                        <div class="player"></div>
-                    </div>
-
-                    <div class="headLeftDois">                        
-                        <button id="myBtn2"><i class="fa fa-trophy" aria-hidden="true"></i> RANKING</button>
-                    </div>
+            <div class="headLeft">
+                <div class="headLeftUm">
+                    <div class="nick">NICK:</div>
+                    <div class="player"></div>
                 </div>
 
-
-                <div class="headRight">
-                    <div class="headRightUm">
-                        <div class="timer-texto">TIMER:</div>
-                        <div class="timer"></div>
-                        <span id="timerCombined"><b style="color: #a52a2a;">LET'S GO!</b></span>
-                    </div>
-                    <div class="headRightDois">                        
-                        <button onClick="window.location.reload();" class="refresh"><i class="fa fa-gamepad" aria-hidden="true"></i> PLAY AGAIN</button>
-                    </div>
+                <div class="headLeftDois">
+                    <button id="myBtn2"><i class="fa fa-trophy" aria-hidden="true"></i> RANKING</button>
                 </div>
+            </div>
+
+
+            <div class="headRight">
+                <div class="headRightUm">
+                    <div class="timer-texto">TIMER:</div>
+                    <div class="timer"></div>
+                    <span id="timerCombined"><b style="color: #a52a2a;">LET'S GO!</b></span>
+                </div>
+                <div class="headRightDois">
+                    <button onClick="window.location.reload();" class="refresh"><i class="fa fa-gamepad"
+                            aria-hidden="true"></i> PLAY AGAIN</button>
+                </div>
+            </div>
         </header>
 
         <div class="grid"></div>
@@ -59,7 +64,9 @@
             Desenvolvido por Well Melo ❤️
         </div>
         <div class="footer-sair">
-            <a class="whts" href="https://api.whatsapp.com/send?text=Olha que top esse jogo da memória com tema do Dragon Ball Z!! https://memorygame.wellmelo.com" target="_blank" data-action="share/whatsapp/share">
+            <a class="whts"
+                href="https://api.whatsapp.com/send?text=Olha que top esse jogo da memória com tema do Dragon Ball Z!! https://memorygame.wellmelo.com"
+                target="_blank" data-action="share/whatsapp/share">
                 <i class="fa fa-whatsapp"></i> Compartilhe no Whatsapp
             </a>
             <a href="/"><i class="fa fa-sign-out" aria-hidden="true"></i> Sair do jogo</a>
@@ -74,11 +81,11 @@
 
             <!-- Modal content -->
             <div class="modal-content">
-                <span class="close">&times;</span>
-                <p>Congratulations 
+                <div class="close">&times;</div>
+                <p>Congratulations
                     <b><span class="nomeplayer"></span></b>
                     ! You completed the game in
-                    <b><span id="timerCombined2">00:00</span></b> 
+                    <b><span id="timerCombined2">00:00</span></b>
                     time!
                 </p>
                 <img src="../images/goku-win.gif" alt="Goku Win!" class="responsive">
@@ -90,9 +97,11 @@
         <div id="myModal2" class="modal2">
             <!-- Modal content -->
             <div class="modal-content2">
-                <span class="close2">&times;</span>
-                <span><b>Ranking</b> and <b>History</b><hr></span>
-                
+                <div class="close2">&times;</div>
+                <span><b>Ranking</b> and <b>History</b>
+                    <hr>
+                </span>
+
                 <div class="avisoRank">
                     <b>Rank is enabled</b> after finding all the cards.
                     <img src="../images/goku.gif" alt="Goku!" class="responsive">
@@ -107,15 +116,17 @@
                                 <th>Time</th>
                             </tr>
                         </thead>
-                            <tbody id="ranking-list">
+                        <tbody id="ranking-list">
                         </tbody>
                     </table>
                 </div>
-                    
-                <button onClick="window.location.reload();" class="rankButton"><i class="fa fa-gamepad" aria-hidden="true"></i> PLAY AGAIN</button>
+
+                <button onClick="window.location.reload();" class="rankButton"><i class="fa fa-gamepad"
+                        aria-hidden="true"></i> PLAY AGAIN</button>
             </div>
         </div>
 
     </main>
 </body>
+
 </html>
