--- a/game/index.html
+++ b/game/index.html
@@ -60,19 +60,6 @@
 
         <div class="grid"></div>
 
-        <div class="footer">
-            Desenvolvido por Well Melo ❤️
-        </div>
-        <div class="footer-sair">
-            <a class="whts"
-                href="https://api.whatsapp.com/send?text=Olha que top esse jogo da memória com tema do Dragon Ball Z!! https://memorygame.wellmelo.com"
-                target="_blank" data-action="share/whatsapp/share">
-                <i class="fa fa-whatsapp"></i> Compartilhe no Whatsapp
-            </a>
-            <a href="/"><i class="fa fa-sign-out" aria-hidden="true"></i> Sair do jogo</a>
-        </div>
-
-
         <!-- Trigger/Open The Modal -->
         <button id="myBtn"></button>
 
@@ -127,6 +114,27 @@
         </div>
 
     </main>
+
+    <footer class="footer_container">
+        <div class="footer_container_row">
+            <div class="footer_left">
+                Powered by
+                <a href="https://github.com/wellmelo" target="_blank"><i class="fa fa-github"
+                        aria-hidden="true"></i>Well Melo</a>
+                <a href="https://github.com/wellmelo/memory-game" target="_blank" class="footer_link"> <i
+                        class="fa fa-github" aria-hidden="true"></i>Repository GitHub</a>
+            </div>
+            <div class="footer_right">
+                <a class="whts"
+                    href="https://api.whatsapp.com/send?text=Olha que top esse jogo da memória com tema do Dragon Ball Z!! https://memorygame.wellmelo.com"
+                    target="_blank" data-action="share/whatsapp/share">
+                    <i class="fa fa-whatsapp"></i> Share on Whatsapp
+                </a>
+                <a href="/"><i class="fa fa-sign-out" aria-hidden="true"></i> Exit game</a>
+            </div>
+        </div>
+    </footer>
+
 </body>
 
 </html>
