Add new footer in page Index e Game

--- a/index.html
+++ b/index.html
@@ -1,30 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Memory Game DBZ | Well Melo</title>
 
-        <meta property="og:url" content="https://memorygame.wellmelo.com" />
-        <meta property="og:type" content="website" />
-        <meta property="og:title" content="Memory Game - Dragon Ball Z" />
-        <meta property="og:description" content="Memory game with Dragon Ball Z theme, have fun and share with your friends!" />
-        <meta property="og:image" itemprop="image" content="https://memorygame.wellmelo.com/images/memory-game-dbz-wellmelo.jpg" />
-        <meta property="og:image:alt" content="Memory Game - Dragon Ball Z" />
-        <meta property="og:site_name" content="Well Melo - Desenvolvedor Web"/>
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Memory Game DBZ | Well Melo</title>
 
-        <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
-        <link rel="manifest" href="/images/site.webmanifest">
-        
-        <link rel="stylesheet" href="./css/reset.css">
-        <link rel="stylesheet" href="./css/login.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <meta property="og:url" content="https://memorygame.wellmelo.com" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Memory Game - Dragon Ball Z" />
+    <meta property="og:description"
+        content="Memory game with Dragon Ball Z theme, have fun and share with your friends!" />
+    <meta property="og:image" itemprop="image"
+        content="https://memorygame.wellmelo.com/images/memory-game-dbz-wellmelo.jpg" />
+    <meta property="og:image:alt" content="Memory Game - Dragon Ball Z" />
+    <meta property="og:site_name" content="Well Melo - Desenvolvedor Web" />
 
-        <script defer src="./js/login.js"></script>
-    </head>
-    <body>
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
+    <link rel="manifest" href="/images/site.webmanifest">
+
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/login.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <script defer src="./js/login.js"></script>
+</head>
+
+<body>
     <main>
         <form class="login-form">
 
@@ -34,15 +38,34 @@
             </div>
             <span id="nameError">Maximum of 13 characters allowed.</span>
             <input type="text" placeholder="YOU NICK" class="login_input" id="nameInput">
-            
 
-            <button type="submit" class="login_button" disabled><i class="fa fa-gamepad" aria-hidden="true"></i> PLAY NOW!</button>
+
+            <button type="submit" class="login_button" disabled><i class="fa fa-gamepad" aria-hidden="true"></i> PLAY
+                NOW!</button>
 
         </form>
-
-        <div class="footer">
-            Desenvolvido por Well Melo ❤️ 
-        </div>
     </main>
-    </body>
+
+    <footer class="footer_container">
+        <div class="footer_container_row">
+            <div class="footer_left">
+                Powered by
+                <a href="https://github.com/wellmelo" target="_blank"><i class="fa fa-github"
+                        aria-hidden="true"></i>Well Melo</a>
+                <a href="https://github.com/wellmelo/memory-game" target="_blank" class="footer_link"> <i
+                        class="fa fa-github" aria-hidden="true"></i>Repository GitHub</a>
+            </div>
+            <div class="footer_right">
+                <a class="whts"
+                    href="https://api.whatsapp.com/send?text=Olha que top esse jogo da memória com tema do Dragon Ball Z!! https://memorygame.wellmelo.com"
+                    target="_blank" data-action="share/whatsapp/share">
+                    <i class="fa fa-whatsapp"></i> Share on Whatsapp
+                </a>
+                <a href="/"><i class="fa fa-sign-out" aria-hidden="true"></i> Exit game</a>
+            </div>
+        </div>
+    </footer>
+
+</body>
+
 </html>
