Adj responsive footer

--- a/game/index.html
+++ b/game/index.html
@@ -123,6 +123,7 @@
                         aria-hidden="true"></i>Well Melo</a>
                 <a href="https://github.com/wellmelo/memory-game" target="_blank" class="footer_link"> <i
                         class="fa fa-github" aria-hidden="true"></i>Repository GitHub</a>
+
             </div>
             <div class="footer_right">
                 <a class="whts"
@@ -134,7 +135,15 @@
             </div>
         </div>
     </footer>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3PXDVS933Z"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
+        gtag('config', 'G-3PXDVS933Z');
+    </script>
 </body>
 
 </html>
