--- a/index.html
+++ b/index.html
@@ -65,7 +65,15 @@
             </div>
         </div>
     </footer>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3PXDVS933Z"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
+        gtag('config', 'G-3PXDVS933Z');
+    </script>
 </body>
 
 </html>
