Adj sound hover/click

--- a/game/index.html
+++ b/game/index.html
@@ -75,7 +75,7 @@
                     <b><span id="timerCombined2">00:00</span></b>
                     time!
                 </p>
-                <img src="../images/goku-win.gif" alt="Goku Win!" class="responsive">
+                <img src="../images/gif_clapping.gif" alt="Goku Win!" class="responsive">
                 <!--<button onClick="window.location.reload();" class="refresh">PLAY AGAIN</button> -->
             </div>
         </div>
